--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <script src="/jquery-3.5.1.js"></script>
-    <script defer src="/main.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="jquery-3.5.1.js"></script>
+    <script defer src="main.js"></script>
     <title>Calculator</title>
 </head>
 
